--- a/demo/carouset/index.less
+++ b/demo/carouset/index.less
@@ -4,3 +4,178 @@ html,body,ul,li,div{
 *{
 	-webkit-tap-highlight-color:rgba(0,0,0,0);
 }
+
+
+
+.qhx-imgtext{
+    width:70%;
+    margin:50px auto;
+	& ul{
+	  & li{
+	     width:200px;
+	     margin:0 20px;
+	     padding:27px 25px;
+	  }
+	}
+	&-text{
+	   padding-left:20px;
+	   & span:first-child{
+	      font-size:20px;
+	   }
+	   & span:last-child{
+	     padding-top:16px;
+	     font-size:14px;
+
+	   }
+	}
+}
+
+.help-title-one{
+	width:100%;
+	margin-top:20px;
+	position:relative;
+	display:inline-flex;
+	justify-content:center;
+	font-size:25px;
+	&:after{
+	   content:'';
+	   position:absolute;
+	   height:1px;
+	   width:80px;
+	   background:#eee;
+	   border-top:1px solid #eee;
+	   left:50%;bottom:-20px;
+	   margin-left:-40px;
+	}
+}
+.help-vidiu{
+	height:30px;
+	display:inline-flex;
+	align-items:center;
+	& span{
+	   & img{
+	      padding-right:6px;
+	   }
+	}
+	& span:first-child{
+	   flex-grow:2;
+       display:inline-flex;
+       padding-right:5px;
+	}
+	& span:last-child{
+	   flex-grow:1;
+	   display:inline-flex;
+	   padding-right:5px;
+	   justify-content:flex-end;
+
+	}
+}
+.help-imgtext-vedio{
+    font-size:18px;
+	& .qhx-imgtext-text{
+	   & span:first-child{
+	     font-size:15px;
+	     padding-top:9px;
+	   }
+	}
+}
+
+//鼠标移上
+.help-masker-bg{
+	position:absolute;
+	left:0;bottom:0;top:0;right:0;background:rgba(51,153,204,.5)
+}
+
+.qhx-imgtext-masker{
+	position:absolute;
+	left:0;right:0;top:0;bottom:0;
+	& img{
+        position:absolute;
+        left:50%;
+        top:25%;
+        margin-left:-23px;
+	}
+}
+
+
+
+//download
+.download-imgtext{
+    width:100%;
+    background:rgb(242,242,242);
+    & ul{
+       width:60%;
+       margin:50px auto;
+       & li{
+         background:#fff;
+         width:140px;
+       }
+    }
+    & .qhx-imgtext-img{
+       display:flex;
+       justify-content:center;
+       & img{
+	   width:62px;
+	   height:62px;
+	   margin-top:20px;
+	   }
+    }
+    & .qhx-imgtext-text{
+       justify-content:center;
+       align-items:center;
+       & span{
+          &:first-child{
+              font-size:35px;
+              letter-space:1px;
+              margin-top:20px;
+              color:#555;
+          }
+          &:last-child{
+             font-size:18px;
+             padding-top:10px;
+          }
+       }
+    }
+    & .download-dl{
+       width:100%;
+       display:flex;
+       justify-content:center;
+       margin-top:20px;
+       margin-bottom:50px;
+       & span{
+          padding:7px 17px;
+          background:rgb(0,153,255);
+          color:#fff;
+          display:inline-flex;
+          align-item:center;
+          & img{
+             width:24px;height:20px;padding-left:3px;padding-right:10px;
+          }
+       }
+
+    }
+
+}
+
+.dll-imgtext{
+	& ul{
+	 & li{
+	    align-items:center;
+	    & .qhx-imgtext-text{
+	       &-title{
+	          color:rgb(51,153,255);padding-bottom:10px;
+	       }
+	    }
+	    & .download-dl{
+            margin-left:40px;
+            & span{
+               padding:5px 20px;color:#fff;
+               background:rgb(0,153,255);
+            }
+	    }
+	    & .download-time{
+
+	    }
+	 }
+	}
+}
