--- a/demo/carouset/index.less
+++ b/demo/carouset/index.less
@@ -109,6 +109,7 @@ html,body,ul,li,div{
        & li{
          background:#fff;
          width:140px;
+         border-radius:8px;
        }
     }
     & .qhx-imgtext-img{
@@ -161,6 +162,34 @@ html,body,ul,li,div{
 	& ul{
 	 & li{
 	    align-items:center;
+	    margin:0;
+	    & .qhx-imgtext-text{
+	       &-title{
+	          color:rgb(51,153,255);padding-bottom:10px;
+	       }
+	    }
+	    & .download-dl{
+            margin-left:40px;
+            & span{
+               padding:5px 20px;color:#fff;
+               background:rgb(0,153,255);
+            }
+	    }
+	    & .download-time{
+
+	    }
+	 }
+	}
+}
+
+.video-imgtext{
+     margin-top:0;
+     margin-bottom:0;
+   & ul{
+     margin-top:0;
+	 & li{
+	    align-items:center;
+	    margin:0;
 	    & .qhx-imgtext-text{
 	       &-title{
 	          color:rgb(51,153,255);padding-bottom:10px;
