--- a/src/components/masker/index.less
+++ b/src/components/masker/index.less
@@ -2,15 +2,15 @@
     position:absolute;
     left:0;top:0;
     right:0;bottom:0;
-    background:rgba(0,0,0,.6);
+    background:rgba(0,0,0,.2);
 	&-show{
 	  transform-origin:50% 50%;
   	  transform:scale(100%);
-	  transition:transform .4s ease-in;
+	  transition:transform .2s linear;
 	}
 	&-hide{
 	  transform-origin:50% 50%;
 	  transform:scale(0);
-	  transition:transform .4s ease-in;
+	  transition:transform .2s linear;
 	}
 }
