--- a/src/components/dropDown/index.less
+++ b/src/components/dropDown/index.less
@@ -1,12 +1,12 @@
 .qhx-dropdown{
 	position:absolute;
-	left:10px;top:20px;overflow:hidden;
+	left:10px;top:20px;overflow:hidden;border:1px solid #eee;border-radius:6px;
     &-hide{
-       height:0;       transition:height .3s ease-in;
+       height:0px;       transition:all .3s ease-in;
     }
     &-show{
-       min-height:50px;
-       transition:height .3s ease-in;
+       height:260px;
+       transition:all .3s ease-in;
     }
     & ul{
       background:#fff;
