--- a/demo/carouset/index.less
+++ b/demo/carouset/index.less
@@ -208,3 +208,14 @@ html,body,ul,li,div{
 	 }
 	}
 }
+
+.modal-row{
+	display:inline-flex;width:100%;justify-content:flex-start;;margin-left:20px;
+    & > div{
+       width:50%;
+       display:inline-flex;margin-top:20px;align-items:center;justify-content:center;
+    }
+    & input{
+       height:30px;border:1px solid #eee;border-radius:6px;padding-left:8px;margin-left:5px;
+    }
+}
