--- a/src/components/dropDown/index.less
+++ b/src/components/dropDown/index.less
@@ -1,24 +1,32 @@
 .qhx-dropdown{
 	position:absolute;
-	left:10px;top:20px;overflow:hidden;border:1px solid #eee;border-radius:6px;
+	left:0px;top:33px;overflow:hidden;;right:0;z-index:99;border-bottom-left-radius:6px;border-bottom-right-radius:6px;
     &-hide{
        height:0px;       transition:all .3s ease-in;
     }
     &-show{
-       height:260px;
-       transition:all .3s ease-in;
+       transition:all .3s ease-in .2s;
     }
     & ul{
       background:#fff;
       width:100%;
       & li{
-         padding:10px 20px;
+         padding:0px 10px;
+         height:30px;
+         display:flex;align-items:center;
          position:relative;
+         border:1px solid #eee;border-bottom:none;border-top:none;border-top:none;
          &:after{
             content:'';
             position:absolute;
             left:0;right:0;
-            bottom:0;border-bottom:1px solid #eee;
+            bottom:0;
+         }
+         &:last-child{
+            border-bottom:1px solid #eee;
+         }
+         &:hover{
+            background:rgb(230,247,255)
          }
       }
     }
