--- a/src/components/select/index.less
+++ b/src/components/select/index.less
@@ -6,6 +6,7 @@
 	   border-radius:6px;
 	   width:100%;padding:5px 0;
 	   display:inline-flex;
+	   cursor:pointer;
 	   & .qhx-select-content{
 	      flex-grow:2;padding-left:4px;
 	   }
