--- a/src/components/modal/index.less
+++ b/src/components/modal/index.less
@@ -7,6 +7,7 @@
 	left:50%;
 	margin-left:-440px;
 	top:10%;
+
 	&.qhx-modal-hide{
 	   transform:scale(0);
 	   transform-origin:0 100%;
@@ -35,7 +36,7 @@
 	   }
 	}
 	&-body{
-	   min-height:100px;
+	   min-height:100px;	padding-bottom:40px;
 	}
 	&-footer{
 	    height:50px;
