--- a/src/components/modal/index.less
+++ b/src/components/modal/index.less
@@ -45,6 +45,7 @@
 	    justify-content:flex-end;
 	    border-top:1px solid #eee;
 	    align-items:center;
+	    cursor:pointer;
 	    & div{
 	       padding-right:30px;
 	    }
