--- a/src/components/dropDown/index.less
+++ b/src/components/dropDown/index.less
@@ -1,6 +1,6 @@
 .qhx-dropdown{
 	position:absolute;
-	left:0px;top:33px;overflow:scroll;;right:0;z-index:99;border-bottom-left-radius:6px;border-bottom-right-radius:6px;
+	left:0px;top:33px;overflow-y:scroll;;right:0;z-index:99;border-bottom-left-radius:6px;border-bottom-right-radius:6px;
   border-bottom:1px solid #eee;
     &-hide{
        height:0px;       transition:all .2s ease-in;
