--- a/demo/carouset/index.less
+++ b/demo/carouset/index.less
@@ -224,3 +224,8 @@ html,body,ul,li,div{
        height:30px;border:1px solid #eee;border-radius:6px;padding-left:8px;margin-left:5px;
     }
 }
+
+.qhx-exchange{
+	width:300px;
+	margin-left:400px;border:1px solid #eee;
+}
