--- a/src/components/Tab/index.less
+++ b/src/components/Tab/index.less
@@ -1,13 +1,13 @@
 .tab-wrapper{
 	display:flex;
 	flex-direction:column;
-	& ul{
+	& > ul{
 	   display:inline-flex;
        padding:0;
        font-size:20px;
        cursor:pointer;
        color:#4f5255;
-	   & li{
+	   & > li{
 	       display:inline-flex;
 	       list-style:none;
 	       justify-content:center;
@@ -18,7 +18,7 @@
 	          color:#2d8cf0
 	       }
 	   }
-	   & li.active{
+	   & > li.active{
 	      color:rgb(45,140,240);
 	   }
 
