--- a/src/components/dropDown/index.less
+++ b/src/components/dropDown/index.less
@@ -8,11 +8,11 @@
     &-show{
        transition:all .2s ease-in;
     }
-    & ul{
+    & > ul{
       background:#fff;
       width:100%;
       cursor:pointer;
-      & li{
+      & > li{
          padding:0px 10px;
          height:30px;
          display:flex;align-items:center;
