--- a/src/components/exchange/index.less
+++ b/src/components/exchange/index.less
@@ -1,10 +1,8 @@
 .qhx-exchange{
-	display:flex;flex-direction:column;border:1px solid #eee;
-	width:260px;
-	margin-left:390px;
+	display:flex;flex-direction:column;margin-top:20px;
 	&-layerone{
 	   width:50%;
-	   margin:10px auto;
+	   margin:10px auto;justify-content:center;
 	   background:rgb(0,153,255);display:inline-flex;padding:7px 18px;
        & img{
           width:24px;height:20px;
@@ -23,30 +21,24 @@
 	   }
 	}
 	&-layertwo{
-	   padding:10px 4px;
-
-	   & ul{
+	   & > ul{
 	     display:flex;flex-direction:column;
-	     & li{
-	       margin-top:20px;
-	       list-style:none;display:inline-flex;
+	     & > li{
+	       list-style:none;display:inline-flex;width:100%;margin-top:10px;
 	       & div{
 	          background:rgb(242,242,242);border-radius:6px;
 	          padding:15px 0px;
-	          margin:0 4px;
+	          margin:0 4px;flex-grow:1;
 	          font-size:14px;
 	          & .dl-content{
-                 padding-left:8px;
+                display:inline-flex;
+                width:59%;justify-content:center;
 	          }
 	          & .dl-text{
-	             padding:3px 18px;
-	             background:rgb(0,153,255);
-	             color:#fff;
-	             margin-left:10px;
-	             margin-right:10px;
-	             &:hover{
-                   background:rgb(51,102,204)
-	             }
+                display:inline-flex;
+                width:32%;    background:rgb(0,153,255);
+                color:#fff;justify-content:center;
+                margin-right:3px;padding:3px 0;
 	          }
 	          cursor:pointer
 	       }
