--- a/src/components/imgText/index.less
+++ b/src/components/imgText/index.less
@@ -1,11 +1,11 @@
 .qhx-imgtext{
 	display:flex;
 	width:100%;
-	& ul{
+	& > ul{
 	   width:100%;
        display:flex;
 	   flex-direction:row;
-	   & li{
+	   & > li{
 	      flex-grow:1;border:1px solid #eee;position:relative;
 	   }
 	}
