--- a/src/components/carouset/index.less
+++ b/src/components/carouset/index.less
@@ -4,10 +4,10 @@
     position:relative;
     width:100%;
     height:500px;
-    & ul{
+    & > ul{
        width:100%;
        overflow:hidden;
-       & li{
+       & > li{
          list-style:none;
          position:absolute;
          left:0;top:0;
