--- a/demo/carouset/index.less
+++ b/demo/carouset/index.less
@@ -229,3 +229,124 @@ html,body,ul,li,div{
 	width:300px;
 	margin-left:400px;border:1px solid #eee;
 }
+
+.ril-image{
+	width:100%;
+	height:500px;
+}
+
+
+
+
+
+
+
+
+
+.apply-pro-wrapper{
+    width:65%;
+	margin:30px auto;
+	& .apply-pro-module{
+	   display:inline-flex;
+	   justify-content:center;width:100%;
+	   font-size:20px;color:#555;position:relative;
+	   &:after{
+	      content:'';position:absolute;bottom:-15px;width:100%;height:1px;border-top:1px solid rgba(0,0,0,.1);left:0;
+	   }
+	}
+
+}
+.apply-imgtext{
+    width:100%;
+	& > ul{
+	   padding-top:18px;
+	   flex-wraper:wrap;
+	   margin-top:30px;
+	   & li{
+	     list-style:none;border:none;background:#eee;margin:0 1px;padding:40px 0 30px;
+	     & div{
+	        display:flex;justify-content:center;align-items:center;
+	        &.qhx-imgtext-text{
+	           margin-top:12px;color:#333;
+	        }
+	     }
+	   }
+	}
+}
+
+
+.product-imgtext{
+    @media screen{
+		@media (min-width:992px){
+            width:99%;
+            margin:20px auto;
+            & >ul{
+               & li{
+                                 color:yellow !important;
+                  list-style:none;
+                  & img{
+            width:255px;
+            height:170px;
+                  }
+               }
+            }
+		}
+		@media (min-width:1200px){
+            width:98%;
+            margin:20px auto;
+            & >ul{
+               & li{
+                  list-style:none;
+                  color:red !important;
+                  & img{
+		            width:315px;
+		            height:210px;
+
+                  }
+               }
+            }
+		}
+		@media (min-width:1600px){
+            width:97%;
+            margin:20px auto;
+            & >ul{
+               & li{
+                  color:green !important;
+                  list-style:none;
+                  & img{
+		            width:450px;
+		            height:300px;
+                  }
+               }
+            }
+		}
+		@media (min-width:1800px){
+            width:97%;
+            margin:20px auto;
+            & >ul{
+               & li{
+                  color:green !important;
+                  list-style:none;
+                  & img{
+            width:510px;
+            height:340px;
+                  }
+               }
+            }
+		}
+	} 
+}
+
+.product-imgtext-masker{
+	position:absolute;
+	left:20px;right:20px;color:#fff;
+	top:20px;bottom:20px;background:rgba(72,163,208,.7);
+	&>div{
+	   & div{
+	      width:100%;display:flex;justify-content:center;flex-direction:column;margin:4px 0;
+	   }
+	}
+	&-title{
+	   margin-top:26px;align-items:center;margin-bottom:26px;font-size:25px;
+	}
+}
