--- a/demo/carouset/index.less
+++ b/demo/carouset/index.less
@@ -350,3 +350,7 @@ html,body,ul,li,div{
 	   margin-top:26px;align-items:center;margin-bottom:26px;font-size:25px;
 	}
 }
+
+.qhx-imgtext-row{
+	cursor:pointer;
+}
