--- a/src/components/dropDown/index.less
+++ b/src/components/dropDown/index.less
@@ -1,12 +1,11 @@
 .qhx-dropdown{
 	position:absolute;
 	left:0px;top:33px;overflow-y:scroll;;right:0;z-index:99;border-bottom-left-radius:6px;border-bottom-right-radius:6px;
-  border-bottom:1px solid #eee;
     &-hide{
-       height:0px;       transition:all .2s ease-in;
+       height:0px;transition:all .2s ease-in;
     }
     &-show{
-       transition:all .2s ease-in;
+       transition:all .2s ease-in;  border-bottom:1px solid #eee;
     }
     & > ul{
       background:#fff;
