--- a/src/components/select/index.less
+++ b/src/components/select/index.less
@@ -16,7 +16,7 @@
 			     content:'';
 			     position:absolute;
 			     right:7px;
-			     border-top:6px solid #555;
+			     border-top:6px solid #e2e2e2;
 			     border-left:6px solid transparent;
 			     border-right:6px solid transparent;
 			     top:50%;margin-top:-3px;
